--- a/Day-3/index.html
+++ b/Day-3/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/index.js"></script>
+    <script src="/Day-3/index.js"></script>
+    <script src="/Day-3/task-3.js"></script>
     
 </body>
 </html>
