--- a/Day-5/index.html
+++ b/Day-5/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Day-4/index.css"/>
+    <link rel="stylesheet" href="/Day-5/index.css"/>
 </head>
 <body>
-    <script src="index.js"></script>
-    <script src="/Day-4/task.js"></script>
+    <script src="/Day-5/index.js"></script>
     <h1 style = "color:#000;">Learning Basics Of Javascript</h1>
-    <div class="mani">Html & Css Parser</div>
-    <div id="muthu">CSSOM DOM Explanation</div>
+  
     
 </body>
 </html>
