--- a/calculator _task/index.html
+++ b/calculator _task/index.html
@@ -15,30 +15,31 @@
         <h1 id="title">Calculator</h1>
         <p id="description">Calculator task we can perform arithmetic operation using html css bootstrap and Javascript</p>
         <div class="container">
-            <div class="calculator">
-                <input type="text" id="screen" class="form-control" readonly>
-                <div class="buttons">
-                    <button onclick="clearScreen()" class="btn btn-danger">C</button>
-                    <button onclick="addToScreen('%')" class="btn btn-secondary">%</button>
-                    <button onclick="addToScreen('+')" class="btn btn-secondary">+</button>
-                    <button onclick="addToScreen('-')" class="btn btn-secondary">-</button>
-                    <button onclick="addToScreen('*')" class="btn btn-secondary">*</button>
-                    <button onclick="calculate()" class="btn btn-primary">=</button>
-                    <button onclick="addToScreen('7')" class="btn btn-primary">7</button>
-                    <button onclick="addToScreen('8')" class="btn btn-primary">8</button>
-                    <button onclick="addToScreen('9')" class="btn btn-primary">9</button>
-                    <button onclick="addToScreen('4')" class="btn btn-primary">4</button>
-                    <button onclick="addToScreen('5')" class="btn btn-primary">5</button>
-                    <button onclick="addToScreen('6')" class="btn btn-primary">6</button>
-                    <button onclick="addToScreen('1')" class="btn btn-primary">1</button>
-                    <button onclick="addToScreen('2')" class="btn btn-primary">2</button>
-                    <button onclick="addToScreen('3')" class="btn btn-primary">3</button>
-                    <button onclick="addToScreen('0')" class="btn btn-primary">0</button>
+            <div class="container">
+                <div class="calculator">
+                    <input type="text" id="result" class="form-control" readonly>
+                    <div class="buttons">
+                        <button id="clear" class="btn btn-danger">C</button>
+                        <button id="percent" class="btn btn-secondary">%</button>
+                        <button id="add" class="btn btn-secondary">+</button>
+                        <button id="subtract" class="btn btn-secondary">-</button>
+                        <button id="multiply" class="btn btn-secondary">*</button>
+                        <button id="equal" class="btn btn-primary">=</button>
+                        <button id="7" class="btn btn-primary">7</button>
+                        <button id="8" class="btn btn-primary">8</button>
+                        <button id="9" class="btn btn-primary">9</button>
+                        <button id="4" class="btn btn-primary">4</button>
+                        <button id="5" class="btn btn-primary">5</button>
+                        <button id="6" class="btn btn-primary">6</button>
+                        <button id="1" class="btn btn-primary">1</button>
+                        <button id="2" class="btn btn-primary">2</button>
+                        <button id="3" class="btn btn-primary">3</button>
+                        <button id="0" class="btn btn-primary">0</button>
+                    </div>
                 </div>
             </div>
-        </div>
     </main>
   
-    
+    <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
 </body>
 </html>
