--- a/Promise_quotes_task/index.html
+++ b/Promise_quotes_task/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetch API</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/Promise_quotes_task/index.css"/>
-    <script src="/Promise_quotes_task/index.js" defer></script>
+    <link rel="stylesheet" href="./index.css">
+    <script src="./index.js" defer></script>
     <!-- <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js" defer></script> -->
     
 </head>
